name:                karps
version:             0.2.0.0
synopsis:            Haskell bindings for Spark Dataframes and Datasets
description:         Karps-Haskell is an exploration vehicle for developing safe,
                     scalable and reliable data pipelines over Apache Spark, using
                     the DataFrame API.

                     In order to use it, you must launch Spark with the
                     karps-server module installed.
homepage:            https://github.com/krapsh/kraps-haskell
license:             Apache-2.0
license-file:        LICENSE
author:              krapsh
maintainer:          krapsh@yandex.com
copyright:           2016 Karps-Haskell contributors
category:            Web, Big data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Spark.Core,
                       Spark.Core.Context,
                       Spark.Core.Column,
                       Spark.Core.ColumnFunctions,
                       Spark.Core.Dataset,
                       Spark.Core.Functions,
                       Spark.Core.Internal.Arithmetics,
                       Spark.Core.Internal.ArithmeticsImpl,
                       Spark.Core.Internal.Caching,
                       Spark.Core.Internal.CanRename,
                       Spark.Core.Internal.Client,
                       Spark.Core.Internal.ColumnStandard,
                       Spark.Core.Internal.ComputeDag,
                       Spark.Core.Internal.ContextInteractive,
                       Spark.Core.Internal.ContextInternal,
                       Spark.Core.Internal.ContextIOInternal,
                       Spark.Core.Internal.ContextStructures,
                       Spark.Core.Internal.DAGFunctions,
                       Spark.Core.Internal.DAGStructures,
                       Spark.Core.Internal.DatasetFunctions,
                       Spark.Core.Internal.DatasetStructures,
                       Spark.Core.Internal.Groups,
                       Spark.Core.Internal.Joins,
                       Spark.Core.Internal.LocalDataFunctions,
                       Spark.Core.Internal.ObservableStandard,
                       Spark.Core.Internal.OpFunctions,
                       Spark.Core.Internal.OpStructures,
                       Spark.Core.Internal.Paths,
                       Spark.Core.Internal.PathsUntyped,
                       Spark.Core.Internal.Projections,
                       Spark.Core.Internal.Pruning,
                       Spark.Core.Internal.RowGenericsFrom,
                       Spark.Core.Internal.Utilities,
                       Spark.Core.Internal.TypesGenerics,
                       Spark.Core.Internal.TypesStructures,
                       Spark.Core.Internal.TypesStructuresRepr,
                       Spark.Core.Internal.TypesFunctions,
                       Spark.Core.Row,
                       Spark.Core.StructuresInternal,
                       Spark.Core.Try,
                       Spark.Core.Types,
                       Spark.IO.Inputs
  other-modules:       Spark.Core.Internal.CachingUntyped,
                       Spark.Core.Internal.ColumnFunctions,
                       Spark.Core.Internal.AlgebraStructures,
                       Spark.Core.Internal.ColumnStructures,
                       Spark.Core.Internal.AggregationFunctions,
                       Spark.Core.Internal.FunctionsInternals,
                       Spark.Core.Internal.LocatedBase,
                       Spark.Core.Internal.RowGenerics,
                       Spark.Core.Internal.RowStructures,
                       Spark.Core.Internal.RowUtils,
                       Spark.IO.Internal.InputGeneric,
                       Spark.IO.Internal.Json,
                       Spark.IO.Internal.OutputCommon
  build-depends:       aeson,
                       aeson-pretty,
                       base >= 4.8.1 && < 5,
                       base16-bytestring,
                       binary >= 0.7 && < 0.9,
                       bytestring,
                       containers,
                       cryptohash-sha256,
                       deepseq,
                       either,
                       exceptions,
                       formatting,
                       hashable,
                       lens,
                       monad-logger,
                       QuickCheck,
                       random,
                       scientific,
                       semigroups,
                       SHA,
                       mtl,
                       text,
                       text-format,
                       transformers,
                       unordered-containers,
                       vector,
                       wreq
  ghc-options:         -Wall
   ---fhpc -O0
--  ghc-options:         -fprof-auto --enable-library-profiling -O0 -- -ddump-deriv -O0 -rtsopts=all
  default-language:    Haskell2010


test-suite karps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Spark.Core.ContextSpec,
                       Spark.Core.DatasetSpec,
                       Spark.Core.Internal.CachingSpec,
                       Spark.Core.Internal.LocalDataFunctionsSpec,
                       Spark.Core.Internal.OpFunctionsSpec,
                       Spark.Core.Internal.RowUtilsSpec,
                       Spark.Core.Internal.DAGFunctionsSpec,
                       Spark.Core.Internal.PathsSpec,
                       Spark.Core.Internal.GroupsSpec,
                       Spark.Core.PathSpec,
                       Spark.Core.ProjectionsSpec,
                       Spark.Core.RowToSQLSpec,
                       Spark.Core.TypesSpec,
                       Spark.Core.ColumnSpec,
                       Spark.Core.SimpleExamplesSpec
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , formatting
                     , karps
                     , hspec >= 2.0 && < 2.3
                     , text
                     , raw-strings-qq
                     , QuickCheck
                     , vector
  ghc-options:
  -- -fhpc -O0 -Wall -prof
--  ghc-options:         -ddump-deriv -O0 -rtsopts=all -prof -auto-all
  default-language:    Haskell2010

test-suite karps-test-integration
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test-integration
  main-is:             Spec.hs
  other-modules:       Spark.Core.CachingSpec,
                       Spark.Core.CollectSpec,
                       Spark.Core.ColumnSpec,
                       Spark.Core.GroupsSpec,
                       Spark.Core.IntegrationUtilities,
                       Spark.Core.JoinsSpec,
                       Spark.Core.SimpleAddSpec,
                       Spark.Core.PruningSpec,
                       Spark.IO.JsonSpec,
                       Spark.IO.StampSpec
  build-depends:       aeson
                     , base
                     , bytestring
                     , containers
                     , formatting
                     , karps
                     , hspec == 2.*
                     , text
                     , raw-strings-qq
                     , QuickCheck
                     , vector
  ghc-options:
   -- -fhpc -O0 -Wall -rtsopts=all -auto-all
--  ghc-options:         -ddump-deriv -O0 -rtsopts=all -prof -auto-all
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/krapsh/kraps-haskell
